Fix Drawer z-index

--- a/design/system/components/overlays/Drawer/Drawer.css
+++ b/design/system/components/overlays/Drawer/Drawer.css
@@ -24,7 +24,8 @@
   display: flex;
   flex-direction: column;
   overflow: hidden;
-  position: fixed;
+  position: relative;
+  z-index: 10000;
   animation: drawerSlideInEnd var(--foundation-duration-normal) var(--foundation-ease-out);
 }
 
